[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matpowercaseframes"
description = 'Parse MATPOWER case into pandas DataFrame.'
readme = "README.md"
requires-python = ">=3.7.1"
keywords = ["matpower", "parser"]
license = {text = "MIT License"}
authors = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"},
]
maintainers = [
  {name = "Muhammad Yasirroni", email = "muhammadyasirroni@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
]
dependencies = [
  "numpy>=1.19.0",
  "pandas>=1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
matpower = [
  "matpower>=8.1.0.2.2.3",
]
dev = [
  "matpower>=8.1.0.2.2.3",
  "numpy>=1.21.5",
  "oct2py>=5.5.1",  # latest support for 3.7
  "openpyxl>=3.1.2",
  "pandas>=1.2.0",
  "pre-commit>=3.8.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.10",
]

[project.urls]
Documentation = "https://github.com/UGM-EPSLab/matpowercaseframes#readme"
Issues = "https://github.com/UGM-EPSLab/matpowercaseframes/issues"
Source = "https://github.com/UGM-EPSLab/matpowercaseframes"

[tool.setuptools]
packages = ["matpowercaseframes"]

[tool.ruff]
fix = true
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "B90",  # support <3.10
    "E402",  # temporarily due to nbqa did not support [tool.ruff.per-file-ignores]
    "E741",  # ambiguous variable name
    "F403",  # 'from module import *' used; unable to detect undefined names
]

[tool.ruff.lint.per-file-ignores]
"tests/test_core.py" = ["E501"]
